--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,52 +1,50 @@
 body {
-	padding: 10px;
+  padding: 10px;
 	text-align: center;
-}
-
-.container-button {
-	display: flex;
-  	flex-direction: row;
+  .container-button {
+    display: flex;
+    flex-direction: row;
   	flex-wrap: wrap;
   	justify-content: center;
   	align-content: center;
-	.btn {
-  		margin: 20px;
-	}
-	&.hide {
-  		display: none; 
-	}
-	&.show {
-  		display: inline-block; 
-	}
-}
-
-button,
-.new-game {
-	display: inline-block;
- 	padding: 11px 50px;
+    .btn {
+      margin: 20px;
+    }
+    &.hide {
+      display: none; 
+    }
+    &.show {
+      display: inline-block; 
+    }
+  }
+  button,
+  .new-game {
+    display: inline-block;
+ 	  padding: 11px 50px;
   	max-width: 100%;
   	text-transform: uppercase;
-	font-size: 16px;
+    font-size: 16px;
   	font-weight: 600;
   	text-align: center;
   	white-space: nowrap;
   	vertical-align: middle;
-	color: #fff;
+    color: #fff;
   	background-color: #02ac46;
-	border: 2px solid #02ac46;
+    border: 2px solid #02ac46;
   	border-radius: 4px;
   	transition: color .3s, background-color .3s;
   	cursor: pointer;
-	outline: 0!important;
-	text-decoration: none;
+    outline: 0!important;
+    text-decoration: none;
   	touch-action: manipulation;
   	user-select: none;
-	&:hover, &:active {
-		color: #02ac46;
-		background-color: #fff;
-	}
-}
-.overlay {
+    &:hover, 
+    &:active {
+		  color: #02ac46;
+		  background-color: #fff;
+    }
+  }
+  .overlay {
   	display: none;
   	position: fixed;
   	top: 0;
@@ -56,42 +54,52 @@ button,
   	background: rgba(0, 0, 0, 0.7);
   	&.show {
     	display: block;
-	}
-}
-
-.modal {
-	background: #fff;
-  	width: 400px;
-  	position: absolute;
-  	top: 50%;
-  	left: 50%;
-  	transform: translate3d(-50%, -50%, 0);
-  	border-radius: 6px;
-	&.lose {
-		border: 2px solid #ea0e0e;
-		color: #ea0e0e;
-	}
-	&.win {
-		border: 2px solid #02ac46;	
-		color: #02ac46;
-	}
-	.flex-container {
-		padding: 20px;
-		display: flex;
-    	flex-direction: column;
-    	flex-wrap: nowrap;
-    	justify-content: space-around;
-    	align-content: center;
-    	align-items: center;
-    	text-transform: uppercase;
-	}
-  	.close {
-    	position: absolute;
-    	right: 0;
-    	top: 0;
-    	padding: 5px;
-    	color: #000;
-    	text-decoration: none;
-  	}
+    }
+    .modal {
+      background: #fff;
+      width: 400px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate3d(-50%, -50%, 0);
+      border-radius: 6px;
+      &.lose {
+		    border: 2px solid #ea0e0e;
+		    color: #ea0e0e;
+      }
+      &.win {
+        border: 2px solid #02ac46;
+        color: #02ac46;
+      }
+      .flex-container {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+        align-content: center;
+        align-items: center;
+        text-transform: uppercase;
+        .content {
+          table {
+            border-collapse: collapse;
+            table,
+            th,
+            td {
+              border: 1px solid;
+            }
+          }
+        }
+      }
+      .close {
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding: 5px;
+        color: #000;
+        text-decoration: none;
+      }
+    }
+  }
 }
   
